--- a/configs/prometheus.yaml
+++ b/configs/prometheus.yaml
@@ -25,3 +25,9 @@ scrape_configs:
     scrape_interval: 15s
     static_configs:
       - targets: [ "promtail:9080" ]
+  # Scrape itself
+  - job_name: 'prometheus'
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['localhost:9090']
