--- a/configs/promtail.yaml
+++ b/configs/promtail.yaml
@@ -26,3 +26,7 @@ scrape_configs:
         target_label: 'logstream'
       - source_labels: ['__meta_docker_container_label_logging_jobname']
         target_label: 'job'
+    pipeline_stages:
+      - drop:
+          source: "server"
+          value: "pyroscope_pusher"
