--- a/configs/promtail.yaml
+++ b/configs/promtail.yaml
@@ -27,6 +27,9 @@ scrape_configs:
       - source_labels: ['__meta_docker_container_label_logging_jobname']
         target_label: 'job'
     pipeline_stages:
+      - json:
+          expressions:
+            server: server
       - drop:
           source: "server"
           value: "pyroscope_pusher"
